# raycast-docset

./: .gitignore  .pre-commit-config.yaml  README.md  contribute.py  main.py  pyproject.toml  verify.py  verify_contribution.py
raycast_docset/: __init__.py  builder.py  parsers.py  scraper.py
tests/: test_builder.py  test_contribute.py  test_verify.py  test_verify_contribution.py
