[project]
name = "raycast-docset"
version = "0.1.0"
description = "Generate a Dash docset for Raycast developer documentation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a29",
]
