[project]
name = "raycast-docset"
version = "0.1.0"
description = "Generate a Dash docset for Raycast developer documentation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pillow>=12.0.0",
    "poethepoet>=0.38.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a29",
]

[tool.poe.tasks]
scrape = "uv run main.py --scrape"
build = "uv run main.py --source .cache/raycast-docs/developers.raycast.com"
verify = "uv run verify.py -v"
clean = { shell = "rm -rf output/ .cache/" }
check = "uv run ty check"

[tool.poe.tasks.all]
help = "Scrape, build, and verify the docset"
sequence = ["scrape", "verify"]

[tool.poe.tasks.rebuild]
help = "Clean and rebuild from scratch"
sequence = ["clean", "scrape", "verify"]
